Changes to jwt for the generation of tokens, also changes in the config to support cors